--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       el: '#app',
       data: {
         loading: false,
-        debug: false,
+        debug: true,
         snackbar: false,
         text: ''
       },
@@ -123,7 +123,7 @@
           var destCtx = document.getElementById("canvas2").getContext('2d');
           destCtx.fillStyle = "white";
           destCtx.fillRect(0, 0, 128, 128);
-          destCtx.drawImage(canvas, 0, 0, 120, 120 * canvas.height / canvas.width);
+          destCtx.drawImage(canvas, 0, 0, 128, 128 * canvas.height / canvas.width);
         },
         clearCanvas: function() {
           var canvas = document.getElementById("canvas")
