--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       el: '#app',
       data: {
         loading: false,
-        debug: true,
+        debug: false,
         snackbar: false,
         text: ''
       },
