--- a/index2.html
+++ b/index2.html
@@ -244,7 +244,7 @@
   <div id="app">
     <v-app>
       <v-layout>
-    <v-flex xs12 md9 offset-md3 class="pa-2">
+    <v-flex xs12 class="pa-2">
           <div class="display-3">ugly ai art</div>
           <div class="display-1">help teach the ai to draw ~ draw anything, it doesn't need to look good. the uglier the better. <small>ty ^^</small></div>
           <div>
