added instagram link

--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
     // Variables for referencing the canvas and 2dcanvas context
     var canvas,ctx;
 
-    var size_param = 8;
+    var size_param = 6;
 
     // Variables to keep track of the mouse position and left-button status
     var mouseX,mouseY,mouseDown=0;
@@ -251,6 +251,7 @@
           <v-btn large flat icon href="#" id="downloader" @click="download()" download="image.png">
               <v-icon>save_alt</v-icon>
             </v-btn>
+            <small><a href="https://www.instagram.com/ugly_ai_art/">the instagram</a></small>
           </div>
           <canvas style="background-color: #ffffff; border-style: solid; border-width: 3px; border-color: #202020;" width="640" height="640" id="sketchpad">
           </canvas>
